--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: opinioncollectorbackend
   datasource:
-    username: root
-    password: root
+    username:
+    password:
     url: jdbc:postgresql://localhost:5432/opinioncollector
   jpa:
     hibernate:
@@ -16,5 +16,5 @@ spring:
         globally_quoted_identifiers: true
 jwt:
   variables:
-    jwtSecret: mySecreyKey
-    jwtExpirationMs: 86400000
+    jwtSecret:
+    jwtExpirationMs: 
