--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/opinioncollector
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     defer-datasource-initialization: true
     properties:
@@ -19,7 +19,8 @@ spring:
     init:
       platform: postgresql
       mode: always
+      continue-on-error: true
 jwt:
   variables:
     jwtSecret:
-    jwtExpirationMs: 
+    jwtExpirationMs:
